--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,3 +21,70 @@ header[role="banner"] {
     }
   }
 }
+
+.movie {
+  width: 350px;
+  height: 800px;
+  border: solid black 1px;
+  margin: 5px;
+  img {
+    margin: 5px;
+    height: 445px;
+  }
+}
+
+.movieTitle {
+  font-size: 1.25em;
+  animation: blink-animation .5s steps(5, start) infinite;
+}
+
+.spyScroller {
+  height: 200px;
+}
+
+.navbar {
+  margin: 0px;
+}
+
+#scroller {
+  height: 90%;
+  overflow-y: auto;
+  div {
+    margin: 0px;
+    padding: 2px;
+  }
+}
+
+.section1 {
+  background-color: #FFF;
+  color: #000;
+}
+.section2 {
+ background-color: #000099;
+ color: white;
+}
+.section3 {
+  background-color: firebrick;
+  color: white;
+}
+.section4 {
+  background-color: goldenrod;
+  color: white;
+}
+
+#editForm {
+  text-align: center;
+  font-size: 1.5em;
+}
+
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
