have watched buttons/rows working, need to get edit working

--- a/templates/movie-template.hbs
+++ b/templates/movie-template.hbs
@@ -1,13 +1,8 @@
 <div class="col-md-4 movie">
-  <button type="button" class="btn btn-success saveButton" data-imdbid="{{imdbID}}">Save</button>
-  <button type="button" class="btn btn-danger removeButton">Delete</button>
   <img src="{{Poster}}" alt="{{Title}}"/>
-  <h3>{{Title}}</h3>
-  <div>
-    <div>Year: {{Year}}</div>
-    <div>Starring: {{Actors}}</div>
-    <div>Summary: {{Plot}}</div>
-  </div>
+  <marquee class="movieTitle">{{Title}}</marquee>
+  <button type="button" class="btn btn-success saveButton" data-imdbid="{{imdbID}}">Save</button>
+  <button type="button" class="btn btn-danger removeButton">Delete</button> <br>
   <label for="{{imdbID}}-watched">Watched:</label>
   <input type="checkbox" name="{{imdbID}}-watched" id="{{imdbID}}-watched"/>
   <label for="{{imdbID}}-rating">Rating:</label>
@@ -18,4 +13,49 @@
     <option>4</option>
     <option>5</option>
   </select>
+
+  <div data-spy="scroll" data-target=".nav{{imdbID}}" class="spyScroller">
+    <nav class="navbar nav{{imdbID}} navbar-inverse navbar-static">
+      <ul class="nav navbar-nav">
+        <li><a href="#section1{{imdbID}}">Plot</a></li>
+        <li><a href="#section2{{imdbID}}">Actors</a></li>
+        <li><a href="#section3{{imdbID}}">Awards</a></li>
+        <li><a href="#section4{{imdbID}}">Info</a></li>
+        </ul>
+    </nav>
+  <div id="scroller">
+
+      <div id="section1{{imdbID}}" class="section1">
+        <p>Plot: </p>
+        <p>{{Plot}}</p>
+      </div>
+
+      <div id="section2{{imdbID}}" class="section2">
+        <p>Starring:</p>
+        <p>{{Actors}}</p>
+      </div>
+
+      <div id=section4{{imdbID}} class="section3">
+        <p>Awards:</p>
+        <p>{{Awards}}</p>
+      </div>
+
+      <div id="section4{{imdbID}}" class="section4">
+        <p>IMDB Rating:</p>
+        <p>{{imdbRating}}</p>
+
+        <p>Director:</p>
+        <p>{{Director}}</p>
+
+        <p>Released:</p>
+        <p>{{Released}}</p>
+
+        <p>Run Time:</p>
+        <p>{{Runtime}}</p>
+
+        <p>Genre:</p>
+        <p>{{Genre}}</p>
+      </div>
+    </div>
+  </div>
 </div>
