--- a/templates/saved-movie-template.hbs
+++ b/templates/saved-movie-template.hbs
@@ -1,55 +1,36 @@
 <div class="col-md-4 movie">
   <img src="{{Poster}}" alt="{{Title}}"/>
   <marquee class="movieTitle">{{Title}}</marquee>
-  <label for="{{imdbID}}-watched">Watched:</label>
-  <div name="{{imdbID}}-watched" style="display: inline-block">{{watched}}</div>
-  <label for="{{imdbID}}-rating">Rating:</label>
-  <div name="{{imdbID}}-rating" style="display: inline-block">{{rating}}</div> <br>
-  <button type="button" class="btn btn-success editButton" data-imdbId="{{imdbID}}" data-editKey="{{fbId}}">Edit</button>
+
   <button type="button" class="btn btn-danger deleteButton" data-deleteKey="{{fbId}}">Delete</button>
-  <div data-spy="scroll" data-target=".nav{{imdbID}}" class="spyScroller">
 
-    <nav class="navbar nav{{imdbID}} navbar-inverse navbar-static">
-      <ul class="nav navbar-nav">
-        <li><a href="#section1{{imdbID}}">Plot</a></li>
-        <li><a href="#section2{{imdbID}}">Actors</a></li>
-        <li><a href="#section3{{imdbID}}">Awards</a></li>
-        <li><a href="#section4{{imdbID}}">Info</a></li>
-      </ul>
-    </nav>
-    <div id="scroller">
+  <div id="scroller">
+    <div id="section1{{imdbID}}" class="section1">
+      <p>Starring:</p>
+      <p>{{Actors}}</p>
+    </div>
 
-      <div id="section1{{imdbID}}" class="section1">
-        <p>Plot: </p>
-        <p>{{Plot}}</p>
-      </div>
-
-      <div id="section2{{imdbID}}" class="section2">
-        <p>Starring:</p>
-        <p>{{Actors}}</p>
-      </div>
-
-      <div id=section4{{imdbID}} class="section3">
-        <p>Awards:</p>
-        <p>{{Awards}}</p>
-      </div>
-
-      <div id="section4{{imdbID}}" class="section4">
-        <p>IMDB Rating:</p>
-        <p>{{imdbRating}}</p>
-
-        <p>Director:</p>
-        <p>{{Director}}</p>
-
-        <p>Released:</p>
-        <p>{{Released}}</p>
-
-        <p>Run Time:</p>
-        <p>{{Runtime}}</p>
-
-        <p>Genre:</p>
-        <p>{{Genre}}</p>
-      </div>
+    <div id="section2{{imdbID}}" class="section2">
+      <p>Released:</p>
+      <p>{{Released}}</p>
     </div>
   </div>
+
+  <label for="{{imdbID}}-rating">Rating:</label>
+  <select id="{{imdbID}}-rating" value="{{userRating}}" class="editMovie" data-imdbid="{{imdbID}}" data-editKey="{{fbId}}">
+
+    {{#select value}}
+    <option value="0"></option>
+    <option value="1">1</option>
+    <option value="2">2</option>
+    <option value="3">3</option>
+    <option value="4">4</option>
+    <option value="5">5</option>
+    <option value="6">6</option>
+    <option value="7">7</option>
+    <option value="8">8</option>
+    <option value="9">9</option>
+    <option value="10">10</option>
+    {{/select}}
+  </select>
 </div>
