--- a/templates/saved-movie-template.hbs
+++ b/templates/saved-movie-template.hbs
@@ -19,7 +19,7 @@
   <label for="{{imdbID}}-rating">Rating:</label>
   <select id="{{imdbID}}-rating" value="{{userRating}}" class="editMovie" data-imdbid="{{imdbID}}" data-editKey="{{fbId}}">
 
-    {{#select value}}
+    {{#select userRating}}
     <option value="0"></option>
     <option value="1">1</option>
     <option value="2">2</option>
