--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,21 +5,9 @@ header[role="banner"] {
   }
 }
 
-#navbar-primary.navbar-default {
-  background: transparent;
-  border: none;
-  .navbar-nav {
-    width: 100%;
-    text-align: center;
-    > li {
-      display: inline-block;
-      float: none;
-      > a {
-        padding-left: 30px;
-        padding-right: 30px;
-        }
-    }
-  }
+#navHolder {
+  border: black solid 1px;
+  padding: 5px;
 }
 
 .movie {
