--- a/templates/saved-movie-template.hbs
+++ b/templates/saved-movie-template.hbs
@@ -1,8 +1,10 @@
 <div class="col-md-4 movie">
+  <button type="button" class="btn btn-danger deleteButton" data-deleteKey="{{fbId}}">Delete</button>
+  <div class="clearFix">
+  </div>
   <img src="{{Poster}}" alt="{{Title}}"/>
   <marquee class="movieTitle">{{Title}}</marquee>
 
-  <button type="button" class="btn btn-danger deleteButton" data-deleteKey="{{fbId}}">Delete</button>
 
   <div id="scroller">
     <div id="section1{{imdbID}}" class="section1">
