--- a/templates/movie-template.hbs
+++ b/templates/movie-template.hbs
@@ -1,7 +1,7 @@
 <div class="col-md-4 movie">
- <button type="button" class="btn btn-danger removeButton">Remove</button>
-  <div class="clearFix">
-  </div>
+  <button type="button" class="btn btn-danger removeButton">Remove</button>
+  <div class="clearFix"></div>
+
   <img src="{{Poster}}" alt="{{Title}}"/>
   <marquee class="movieTitle">{{Title}}</marquee>
 
